--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "cd example && npm run test"
   },
   "dependencies": {
+    "deepmerge": "4.2.2",
     "ejs": "2.5.5",
     "express": "4.17.1",
     "glob": "7.0.3",
